force-app/main/default/objects/cgcloud__Picklist_Toggle_Addon__c/cgcloud__Picklist_Toggle_Addon__c.object-meta.xml
<CustomObject>
    <description>This is a non-data object. It&apos;s purely used to define different picklists, which are &quot;retail mobile only&quot; (=no real corresponding field in rcg backend). These picklists are then mapped with the given Picklist-Toggle-Mapping concepts in Sync Package.</description>
    <label>RCG Picklist Toggle Addon</label>
    <nameField>
        <label>RCG Picklist Toggle Addon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RCG Picklist Toggle Addons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>