force-app/main/default/objects/cgcloud__Picklist_Toggle_Addon__c/fields/cgcloud__Dom_Ast_Presence__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dom_Ast_Presence__c</fullName>
    <label>Dom Ast Presence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>0</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>