force-app/main/default/objects/cgcloud__Picklist_Toggle_Addon__c/fields/cgcloud__Dom_Pay_Ctt_Tactic_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dom_Pay_Ctt_Tactic_Status__c</fullName>
    <label>Dom Pay Ctt Tactic Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>FullRejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>