force-app/main/default/objects/cgcloud__Picklist_Toggle_Addon__c/fields/cgcloud__Dom_Prd_Meta_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dom_Prd_Meta_Type__c</fullName>
    <label>Dom Prd Meta Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>PrdGroup</fullName>
            </value>
            <value>
                <fullName>GenericCategory</fullName>
            </value>
            <value>
                <fullName>Category</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>